[package]
name = "clipstream"
version = "0.1.0"
description = "Context-Aware Clipboard Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "clipstream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
image = "0.25"
base64 = "0.22"
enigo = "0.3"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

